# quad-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.scripts/: release.sh
examples/: bromwich.rs  cauchy_integral_formula.rs  causal_pole.rs  complex_line.rs  contour_gallery.rs  fourier_residue.rs  fresnel.rs  indented_pole.rs  jordan_lemma.rs  matrix_valued.rs  multiple_indents.rs  plasma_dispersion.rs  real_gaussian.rs  residue_circle.rs  samples.rs  semicircle.rs  sommerfeld_branch_points.rs  sommerfeld_integral.rs  vector_valued.rs  weighted_residue.rs
src/: _solve.rs  _state.rs  config.rs  contour.rs  error.rs  generate.rs  integrable.rs  integrate.rs  lib.rs  output.rs  prelude.rs  result.rs  segments.rs  solve.rs  state.rs  storage.rs
src/bounds/: mod.rs
src/contour/: deform.rs  mod.rs  piece.rs
src/core/: error.rs  mod.rs  policy.rs  poly.rs  pre.rs  quad.rs  segment.rs
src/gauss_kronrod/: mod.rs  poly.rs  quad.rs
tests/: contour.rs  integration.rs  line.rs  ndarray_integration.rs  pull.rs  readme.rs  singularity.rs  vector.rs
