[package]
name = "quad-rs"
version = "0.2.2"
edition = "2021"
authors = ["Christopher R. Gubbin <cgubbin@protonmail.com>"]
description = "Adaptive Gauss-Kronrod Integration in Rust"
categories = ["mathematics", "science"]
keywords = ["integration", "math", "physics", "numerical"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgubbin/quad-rs/"
homepage = "https://github.com/cgubbin/quad-rs/"
readme = "README.md"

[dependencies]
approx = "0.5.1"
argmin-math = "0.3.0"
nalgebra = "0.33.2"
ndarray = { version = "0.15.6", optional = true }
ndarray-stats = { version = "0.5.1", optional = true }
num-complex = "0.4.0"
num-traits = "0.2.14"
ordered-float = "2.10.0"
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "2"
# trellis-runner = "0.1"
trellis-runner = "0.1.5"

[features]
ndarray = ["dep:ndarray", "dep:ndarray-stats"]

[dev-dependencies]
rand = "0.8.4"
