[package]
name = "quad-rs"
version = "0.2.3"
edition = "2024"
rust-version = "1.85"
authors = ["Christopher R. Gubbin <cgubbin@gmail.com>"]
description = "Adaptive Gauss-Kronrod Integration in Rust"
categories = ["mathematics", "science"]
keywords = ["integration", "math", "physics", "numerical"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgubbin/quad-rs/"
homepage = "https://github.com/cgubbin/quad-rs/"
readme = "README.md"

[dependencies]
nalgebra = "0.33.2"
ndarray = { version = "0.15.6", optional = true }
num-complex = "0.4.0"
num-traits = "0.2.14"
ordered-float = "2.10.0"
thiserror = "2"
trellis-runner = "0.4"


[dev-dependencies]
approx = "0.5.1"
rand = "0.8.4"

[[test]]
name = "ndarray_integration"
required-features = ["ndarray"]

[[example]]
name = "vector_valued"
required-features = ["ndarray"]

[[example]]
name = "matrix_valued"
required-features = ["ndarray"]
